--- a/css/template2.css
+++ b/css/template2.css
@@ -13,7 +13,6 @@
 #col1{
 	margin-top: 5px;
 	width: 100%;
-	
 	border-radius: 5px;
 	border-style: solid;
 	border-color: lightgrey;
@@ -30,3 +29,8 @@
 	background-color: azure;
 }
 
+
+
+#hh{
+	margin-bottom: 100px;
+}
