--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en" manifest="cache.manifest">
 
 <head>
 	<meta charset="utf-8">
@@ -19,9 +19,7 @@
 	<style type="text/css">
 	</style>
 
-	<script>
-
-</script>
+<title>Uwi Web App</title>
 </head>
 
 <body id="bg" data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -42,7 +40,7 @@
 	    <div class="carousel-inner" role="listbox">
 
 	      <div class="item active">
-	        <img src="img/uwi1.jpg" alt="UWI St.Augustine" width="460" height="345">
+	        <img class="img-responsive center-block" src="img/uwi1.jpg" alt="UWI St.Augustine" width="460px" height="345px">
 		      <div class="carousel-caption">
 			    <h3>UWI</h3>
 			    <p>Uwi Campus St.Augustine Trinidad and Tobago.</p>
@@ -50,28 +48,14 @@
 	      </div>
 
 	      <div class="item">
-	        <img src="img/uwi2.jpg" alt="UWI St.Augustine" width="460" height="345">
+	        <img class="img-responsive center-block" src="img/uwi2.jpg" alt="UWI St.Augustine" width="460px" height="345px">
 	        <div class="carousel-caption">
 			    <h3>UWI</h3>
 			    <p>Uwi Campus St.Augustine Trinidad and Tobago.</p>
 			</div>
 	      </div>
 	    
-	      <div class="item">
-	        <img src="img/uwi3.jpg" alt="UWI St.Augustine" width="460" height="345">
-	        <div class="carousel-caption">
-			    <h3>UWI</h3>
-			    <p>Uwi Campus St.Augustine Trinidad and Tobago.</p>
-			</div>
-	      </div>
-
-	      <div class="item">
-	        <img src="img/uwi4.jpg" alt="UWI MONA" width="460" height="345">
-	        <div class="carousel-caption">
-			    <h3>UWI</h3>
-			    <p>Uwi Campus St.Augustine Trinidad and Tobago.</p>
-			</div>
-	      </div>
+	     
 	    </div>
 
 	    <!-- Left and right controls -->
@@ -102,7 +86,7 @@
 	      <div class="collapse navbar-collapse" id="myNavbar">
 	        <ul class="nav navbar-nav">
 	          <li><a href="#section1">About the Uwi</a></li>
-	          <li><a href="#section2">News Feed</a></li>
+	          <li><a href="#section2">Campus Life</a></li>
 	          <li><a href="#section3">How To Apply</a></li>
 	          <li><a href="#section4">Our Programmes</a></li>
 	          <li><a href="#section5">Contact Us</a></li>
@@ -123,8 +107,7 @@
             <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">More Information</button>
           </p>
           <div class="jumbotron">
-            <h1>Hello, world!</h1>
-            <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
+            <h1>Welcome To The University Of The West Indies St. Augustine</h1>
           </div>
         </div>
 
@@ -147,31 +130,49 @@
 <!-- All other Sections -->
 
 	<div id="section1" class="container-fluid">
-	  <h1>Section 1</h1>
-	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	  <h1>About the UWI</h1>
+	  <p>Oriens ex occidente lux – A Light Rising from the West</p>
+	  <p>The University of the West Indies is a dynamic, international institution serving the countries of the Commonwealth Caribbean: Anguilla, Antigua/Barbuda, the Bahamas, Barbados, Belize, the British Virgin Islands, Cayman Islands, Dominica, Grenada, Jamaica, Montserrat, St. Christopher-Nevis, St. Lucia, St. Vincent and the Grenadines, Trinidad and Tobago and the Turks and Caicos Islands</p>
+	  <p>At the UWI we aim to:</p>
+	  <p><ul>
+	  		<li>Advance Education</li>
+	  		<li>Create Knowledge</li>
+	  		<li>Support inclusive development of the Caribbean region and beyond</li>
+	  </ul> </p>
 	</div>
 	<div id="section2" class="container-fluid">
-	  <h1>Section 2</h1>
-	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	 <h1>Campus Life</h1>
+	  <p>Our multicultural student body provide a unique campus experience.</p>
+	  <p>Our student clubs offer an introduction to many cultures and encourage skill building as well foster healthy social interactions.</p>
 	</div>
 	<div id="section3" class="container-fluid">
-	  <h1>Section 3</h1>
-	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-	</div>
+	  <h1>Programmes</h1>
+	  <p>Our 7 faculties, professional schools offer more than 200 programs to some 15,000 graduate, undergraduate and continuing studies students.</p>
 
+	  <p>The UWI, St. Augustine ranks first in Trinidad and Tobago among accredited tertiary-level programmes.</p>
+	</div>
 	<div id="section4" class="container-fluid">
-	  <h1>Section 4</h1>
-	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	  <h1>Admissions</h1>
+	  <p>Want to save lives? Fight for justice? Explore your creativity through the arts? At the UWI St. Augustine, you can study biomedical technology,</p><p> law, dance, as well as hundreds of other programme options.</p>
+	  <p>Apply to join our legion of UWI Pelicans and be part of the next generation of Caribbean leaders, thinkers and innovators.</p>
+	  <p>Unsure of your options? Browse our programmes, take a campus tour, or speak with a student or staff liaison. We have personnel ready and willing to aid you on this exciting journey.</p>
 	</div>
 
 	<div id="section5" class="container-fluid">
-	  <h1>Section 5</h1>
-	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	 <h1>Contact Us</h1>
+		<p>Have more questions?</p>
+
+		<p>Talk to the Student Advisory Services
+		The Lloyd Braithwaite Building</p>
+
+		<p>Email: student.advisory@sta.uwi.edu</p>
+		<p>Tel: (868) 662-2002 ext 82096-8 / 82325 / 82360 / 82099</p>
+		<p>Fax: (868) 663 0052</p>
+		<p>Website: sta.uwi.edu/sas/</p>
+
+		<p>Office Hours</p>
+		<p>Monday to Friday</p>
+		<p>8:30 a.m. - 4:30 p.m</p>
 	</div>
 
 
