--- a/templates/programmes.phtml
+++ b/templates/programmes.phtml
@@ -51,7 +51,7 @@
 <!-- second Nav bar for search-->
 <div class="tab">
     <ul class="nav nav-tabs" id="myTab">
-        <li class="active"><a href="#sectionA">Search All Programmess</a></li>
+        <li class="active"><a href="#sectionA">Search All Programmes</a></li>
         <li><a href="#sectionB">Search by Subject</a></li>
       
     </ul>
